--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.1",
     "next": "13.4.7",
     "node-rsa": "^1.1.1",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.6",
